RESOLVED FIXED287278
`FullscreenManager::exitRemovedFullscreenElement()` should not use `fullscreenOrPendingElement()`
https://bugs.webkit.org/show_bug.cgi?id=287278
Summary `FullscreenManager::exitRemovedFullscreenElement()` should not use `fullscree...
Tim Nguyen (:ntim)
Reported 2025-02-07 11:58:01 PST
Since the element has a fullscreen flag set, it's never going to be the pending element.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-07 11:58:10 PST
Tim Nguyen (:ntim)
Comment 2 2025-02-07 12:15:10 PST
EWS
Comment 3 2025-02-21 20:37:13 PST
Committed 290854@main (8149eb6146fa): <https://commits.webkit.org/290854@main> Reviewed commits have been landed. Closing PR #40237 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.