`FullscreenManager::exitRemovedFullscreenElement()` should not use `fullscreenOrPendingElement()` https://bugs.webkit.org/show_bug.cgi?id=287278 rdar://144401606

Reviewed by Brent Fulgham and Darin Adler.

Since the element has a fullscreen flag set, it's never going to be the pending element.

Stop using `fullscreenOrPendingElement()` to reduce usage of the inaccurate `m_fullscreenElement`.

* LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/move-to-fullscreen-iframe-expected.txt:
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::exitRemovedFullscreenElement):

Canonical link: https://commits.webkit.org/290854@main